--- a/scss/app.scss
+++ b/scss/app.scss
@@ -198,6 +198,8 @@ body {
     @include resp($mxl) {
         font-size: 18px;
         width: 235px;
+        padding-top: 15px!important;
+        padding-bottom: 15px!important;
     }
 }
 
@@ -670,16 +672,12 @@ body {
             display: -webkit-box;
             display: -ms-flexbox;
             display: flex;
-            -webkit-box-orient: horizontal;
-            -webkit-box-direction: normal;
-            -ms-flex-flow: row wrap;
             flex-flow: row wrap;
-            -webkit-box-pack: justify;
-            -ms-flex-pack: justify;
             justify-content: space-between;
-            -webkit-box-align: center;
-            -ms-flex-align: center;
             align-items: center;
+            @include resp ($sm) {
+                justify-content: flex-start;
+            }
         }
         @include resp($lg) {
             -webkit-box-pack: start;
@@ -841,6 +839,8 @@ h6 {
             .nav-link.cus__btn {
                 @include resp ($lg) {
                     width: 225px;
+                    padding-top: 12.5px!important;
+                    padding-bottom: 12.5px!important;
                 }
                 @include resp ($xl) {
                     width: 235px;
@@ -1289,6 +1289,13 @@ main {
             grid-column-gap: 30px;
             width: 93%;
         }
+        @include resp ($xxl) {
+            grid-column-gap: 40px;
+            width: 90%;
+        }
+        @include resp($mxl) {
+            grid-column-gap: 55px;
+        }
     }
     // left section
     .left_section {
@@ -1296,6 +1303,9 @@ main {
         .section_heading {
             @include resp($lg) {
                 font-size: 36px;
+            }
+            @include resp ($xxl) {
+                font-size: 50px!important;
             }
         }
         // section description
@@ -1309,6 +1319,15 @@ main {
         // main heading
         .main_heading {
             height: 45%;
+        }
+        // small section heading 
+        .small_section_heading {
+            @include resp ($xxl) {
+                font-size: 19px;
+            }
+            @include resp ($mxl) {
+                font-size: 20.5px;
+            }
         }
         // texts and button
         .text__buttons {
@@ -1352,6 +1371,12 @@ main {
         .img_wrap {
             img {
                 width: 95px;
+                @include resp ($xl) {
+                    width: 105px;
+                }
+                @include resp ($xxl) {
+                    width: 110px;
+                }
             }
         }
         // texts
@@ -1360,6 +1385,16 @@ main {
             @include resp($lg) {
                 font-size: 17px;
             }
+            @include resp ($xl) {
+                font-size: 19px;
+                line-height: 130%;
+            }
+            @include resp ($xxl) {
+                font-size: 20px;
+            }
+            @include resp ($mxl) {
+                font-size: 21px;
+            } 
         }
 
         // rejoan
@@ -1387,6 +1422,15 @@ main {
                 @include fSmallToLarge(17px, 29px);
                 @include resp($md) {
                     display: inline-block;
+                }
+                @include resp ($xl) {
+                    font-size: 27px!important;
+                }
+                @include resp ($xxl) {
+                    font-size: 30px!important;
+                }
+                @include resp ($mxl) {
+                    font-size: 38px!important;
                 }
             }
         }
@@ -1538,6 +1582,9 @@ main {
             grid-row: 1/3;
             grid-column: 1/4;
             padding-left: 55px !important;
+        }
+        @include resp ($mxl) {
+            padding-left: 80px!important;
         }
         .tittle {
             line-height: 110%;
