--- a/css/app.css
+++ b/css/app.css
@@ -2071,7 +2071,7 @@ main #mainContainer .card__element:nth-child(4) {
   }
 }
 .visual_card_list .shaveOffSection .tittle span {
-  display: block;
+  display: inline;
 }
 @media only screen and (min-width: 992px) {
   .visual_card_list .shaveOffSection .tittle span {
@@ -2195,6 +2195,150 @@ main #mainContainer .card__element:nth-child(4) {
 @media only screen and (min-width: 1800px) {
   #fixItBeforeItBreaks .quote_heading_cardList_container .section_description span {
     font-size: 38px !important;
+  }
+}
+@media only screen and (min-width: 1800px) {
+  #fixItBeforeItBreaks .main_heading .section_heading {
+    font-size: 67px !important;
+  }
+}
+#fixItBeforeItBreaks .openSource,
+#fixItBeforeItBreaks .cloud {
+  border: 1px solid black;
+}
+@media only screen and (min-width: 576px) {
+  #fixItBeforeItBreaks .visual_card_list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto repeat(2, 1fr);
+  }
+}
+@media only screen and (min-width: 1200px) {
+  #fixItBeforeItBreaks .visual_card_list {
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+}
+@media only screen and (min-width: 1400px) {
+  #fixItBeforeItBreaks .visual_card_list {
+    grid-template-columns: 1.25fr 1.25fr repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+}
+@media only screen and (min-width: 576px) {
+  #fixItBeforeItBreaks .visual_card_list .visual_card {
+    padding: 35px 10px 30px 35px;
+    border: none !important;
+  }
+  #fixItBeforeItBreaks .visual_card_list .visual_card .para span {
+    display: inline;
+  }
+}
+@media only screen and (min-width: 576px) and (min-width: 1200px) {
+  #fixItBeforeItBreaks .visual_card_list .visual_card .para span {
+    display: block;
+  }
+}
+#fixItBeforeItBreaks .visual_card_list .shaveOffSection {
+  grid-row: 1/2;
+  grid-column: 1/-1;
+}
+@media only screen and (min-width: 992px) {
+  #fixItBeforeItBreaks .visual_card_list .shaveOffSection {
+    flex-flow: row wrap !important;
+    align-items: center;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  #fixItBeforeItBreaks .visual_card_list .shaveOffSection {
+    grid-row: 1/3;
+    grid-column: 1/3;
+    padding: 65px 0px 55px 50px !important;
+    display: block !important;
+  }
+}
+@media only screen and (min-width: 1400px) {
+  #fixItBeforeItBreaks .visual_card_list .shaveOffSection {
+    padding-top: 90px !important;
+  }
+}
+#fixItBeforeItBreaks .visual_card_list .shaveOffSection .tittle {
+  line-height: 110%;
+}
+@media only screen and (min-width: 768px) {
+  #fixItBeforeItBreaks .visual_card_list .shaveOffSection .tittle {
+    font-size: 30px;
+  }
+}
+@media only screen and (min-width: 992px) {
+  #fixItBeforeItBreaks .visual_card_list .shaveOffSection .tittle {
+    margin-right: 15px;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  #fixItBeforeItBreaks .visual_card_list .shaveOffSection .tittle {
+    font-size: 32px;
+  }
+}
+@media only screen and (min-width: 1400px) {
+  #fixItBeforeItBreaks .visual_card_list .shaveOffSection .tittle {
+    font-size: 40px;
+  }
+}
+@media only screen and (min-width: 1800px) {
+  #fixItBeforeItBreaks .visual_card_list .shaveOffSection .tittle {
+    font-size: 50px;
+  }
+}
+#fixItBeforeItBreaks .visual_card_list .shaveOffSection .tittle span {
+  display: inline-block;
+}
+@media only screen and (min-width: 1200px) {
+  #fixItBeforeItBreaks .visual_card_list .shaveOffSection .tittle span {
+    display: block;
+  }
+}
+#fixItBeforeItBreaks .visual_card_list .shaveOffSection .cus__btn, #fixItBeforeItBreaks .visual_card_list .shaveOffSection .strategy_btn {
+  margin-top: 0px !important;
+}
+@media only screen and (min-width: 1200px) {
+  #fixItBeforeItBreaks .visual_card_list .shaveOffSection .cus__btn, #fixItBeforeItBreaks .visual_card_list .shaveOffSection .strategy_btn {
+    margin-top: 35px !important;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  #fixItBeforeItBreaks .visual_card_list .workload {
+    grid-row: 1/2;
+    grid-column: 3/5;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  #fixItBeforeItBreaks .visual_card_list .openSource {
+    grid-row: 1/2;
+    grid-column: 5/7;
+  }
+}
+@media only screen and (min-width: 576px) {
+  #fixItBeforeItBreaks .visual_card_list .awarness {
+    grid-column: 2/3;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  #fixItBeforeItBreaks .visual_card_list .awarness {
+    grid-row: 2/3;
+    grid-column: 5/7;
+  }
+}
+@media only screen and (min-width: 576px) {
+  #fixItBeforeItBreaks .visual_card_list .cloud {
+    grid-column: 1/2;
+    grid-row: 3/4;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  #fixItBeforeItBreaks .visual_card_list .cloud {
+    grid-column: 3/5;
+    grid-row: 2/3;
   }
 }
 
