--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1614,7 +1614,7 @@ main {
                 font-size: 50px;
             }
             span {
-                display: block;
+                display: inline;
                 @include resp($lg) {
                     display: block;
                 }
@@ -1711,7 +1711,7 @@ main {
         }
     }
 }
-// fix it brefore it breaks ----------------------------
+// --------------------- fix it brefore it breaks ----------------------------
 #fixItBeforeItBreaks {
     .quote_heading_cardList_container .main_heading .section_heading {
         @include resp($xl) {
@@ -1743,6 +1743,140 @@ main {
                 @include resp($mxl) {
                     font-size: 38px !important;
                 }
+            }
+        }
+    }
+    // main heading
+    .main_heading {
+        .section_heading {
+            @include resp($mxl) {
+                font-size: 67px !important;
+            }
+        }
+    }
+    // card border
+    .openSource,
+    .cloud {
+        border: 1px solid black;
+    }
+    // visual card list
+    .visual_card_list {
+        // shave off section
+        @include resp($sm) {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: auto repeat(2, 1fr);
+        }
+        @include resp($xl) {
+            grid-template-columns: repeat(6, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+        }
+        @include resp($xxl) {
+            grid-template-columns: 1.25fr 1.25fr repeat(4, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+        }
+        // visual card
+        .visual_card {
+            @include resp($sm) {
+                padding: 35px 10px 30px 35px;
+                border: none !important;
+                // paragraph
+                .para {
+                    span {
+                        display: inline;
+                        @include resp($xl) {
+                            display: block;
+                        }
+                    }
+                }
+            }
+        }
+        // shave iff section
+
+        .shaveOffSection {
+            grid-row: 1/2;
+            grid-column: 1/-1;
+            @include resp($lg) {
+                flex-flow: row wrap !important;
+                align-items: center;
+            }
+            @include resp($xl) {
+                grid-row: 1/3;
+                grid-column: 1/3;
+                padding: 65px 0px 55px 50px !important;
+                display: block !important;
+            }
+            @include resp($xxl) {
+                padding-top: 90px !important;
+            }
+            // tittle
+            .tittle {
+                line-height: 110%;
+                @include resp($sm) {
+                }
+                @include resp($md) {
+                    font-size: 30px;
+                }
+                @include resp($lg) {
+                    margin-right: 15px;
+                }
+                @include resp($xl) {
+                    font-size: 32px;
+                }
+                @include resp($xxl) {
+                    font-size: 40px;
+                }
+                @include resp($mxl) {
+                    font-size: 50px;
+                }
+                span {
+                    display: inline-block;
+                    @include resp($xl) {
+                        display: block;
+                    }
+                }
+            }
+            // custom button
+            .cus__btn {
+                margin-top: 0px !important;
+                @include resp($xl) {
+                    margin-top: 35px !important;
+                }
+            }
+        }
+        // workload section
+        .workload {
+            @include resp($xl) {
+                grid-row: 1/2;
+                grid-column: 3/5;
+            }
+        }
+        // open source section
+        .openSource {
+            @include resp($xl) {
+                grid-row: 1/2;
+                grid-column: 5/7;
+            }
+        }
+        // awarness section
+        .awarness {
+            @include resp($sm) {
+                grid-column: 2/3;
+            }
+            @include resp($xl) {
+                grid-row: 2/3;
+                grid-column: 5/7;
+            }
+        }
+        // cloud  section
+        .cloud {
+            @include resp($sm) {
+                grid-column: 1/2;
+                grid-row: 3/4;
+            }
+            @include resp($xl) {
+                grid-column: 3/5;
+                grid-row: 2/3;
             }
         }
     }
